# ChangeLog for games-sports/toycars
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-sports/toycars/ChangeLog,v 1.20 2014/05/15 17:01:58 ulm Exp $

  15 May 2014; Ulrich Müller <ulm@gentoo.org> toycars-0.3.10.ebuild:
  Fix USE dependency on media-libs/libsdl, "audio" USE flag was renamed to
  "sound", bug 357661.

  09 Apr 2011; Alfredo Tupone <tupone@gentoo.org> toycars-0.3.10.ebuild,
  +files/toycars-0.3.10-gcc46.patch:
  Fix build with gcc-4.6 Bug #362735 by Diego Elio Pettenò

  20 Mar 2011; Justin Lecher <jlec@gentoo.org> toycars-0.3.10.ebuild:
  x11-libs/fltk SLOTMOVE 1.1 -> 1, corrected ebuild accordingly

  29 Apr 2010; Michael Sterrett <mr_bones_@gentoo.org>
  toycars-0.3.10.ebuild, +files/toycars-0.3.10-gcc45.patch:
  improve use flag deps; add gcc45 patch from Kacper Kowalik (Xarthisius)
  via bug #317751

  31 Mar 2010; Tupone Alfredo <tupone@gentoo.org> toycars-0.3.10.ebuild:
  Rename corner.map to fix bug #311811 by Robert Cernansky

  25 Nov 2009; Markus Meier <maekke@gentoo.org> toycars-0.3.10.ebuild:
  amd64/x86 stable, bug #294341

  12 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> toycars-0.3.10.ebuild,
  +files/toycars-0.3.10-glibc-2.10.patch:
  Fix building with GLIBC 2.10+ wrt #277072, thanks to Dominik Kapusta for
  patch.

*toycars-0.3.10 (01 Jul 2009)

  01 Jul 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +toycars-0.3.10.ebuild:
  version bump

*toycars-0.3.9 (03 Jun 2009)

  03 Jun 2009; Samuli Suominen <ssuominen@gentoo.org> +toycars-0.3.9.ebuild:
  Version bump wrt #239127.

  21 Dec 2008; Jeremy Olexa <darkside@gentoo.org>
  +files/toycars-0.3.5-64bit.patch, +files/toycars-0.3.5-gcc43.patch,
  toycars-0.3.5.ebuild:
  (non maintainer commit) add 64bit patch and gcc43 patch to allow compilation
  on amd64, bug #206418

*toycars-0.3.5 (01 Jan 2008)

  01 Jan 2008; Tristan Heaven <nyhm@gentoo.org>
  +files/toycars-0.3.5-asneeded.patch, +files/toycars-0.3.5-assert.patch,