@@ -1,7 +1,7 @@
 DEFINED_PHASES=compile configure install postinst preinst prepare setup unpack
 DEPEND=media-libs/libsdl[sound,video,joystick] media-libs/sdl-image[png] x11-libs/fltk:1[opengl] >=media-libs/fmod-4.25.07-r1:1 virtual/glu virtual/opengl
 DESCRIPTION=a physics based 2-D racer inspired by Micro Machines
-EAPI=2
+EAPI=5
 HOMEPAGE=http://sourceforge.net/projects/toycars
 KEYWORDS=amd64 x86
 LICENSE=GPL-2
@@ -9,4 +9,4 @@ RDEPEND=media-libs/libsdl[sound,video,joystick] media-libs/sdl-image[png] x11-li
 SLOT=0
 SRC_URI=mirror://sourceforge/toycars/toycars-0.3.10.tar.gz
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	games	1ad3205dbf62a2c98249f2f59b0a2d39	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	3a1969a45ff85b026c4e0fa3aa2ab443	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=70239cfa327f4ca65c357cc1f801291c
+_md5_=8d39df0f2693efa8ca950cb8d10f871f
