@@ -1,6 +1,9 @@
 # ChangeLog for games-sports/toycars
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-sports/toycars/ChangeLog,v 1.20 2014/05/15 17:01:58 ulm Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-sports/toycars/ChangeLog,v 1.21 2015/03/15 20:51:08 tupone Exp $
+
+  15 Mar 2015; Tupone Alfredo <tupone@gentoo.org> toycars-0.3.10.ebuild:
+  EAPI 5
 
   15 May 2014; Ulrich Müller <ulm@gentoo.org> toycars-0.3.10.ebuild:
   Fix USE dependency on media-libs/libsdl, "audio" USE flag was renamed to
